--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<html>
-  
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>LIVRO</h1>
+    </header>
+    <section>
+        <div class="primeira-section"
+    </section>
+
+<script src="main.js"></script>
+</body>
 </html>
